--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,38 +127,58 @@ services:
       timeout: 10s
       retries: 5
 
-  # Hive Metastore Service
+  # Hive Metastore Service - Enhanced Configuration
   hive-metastore:
     image: apache/hive:4.0.0
     hostname: hive-metastore
     environment:
       SERVICE_NAME: metastore
       DB_DRIVER: postgres
-      SERVICE_OPTS: "-Djavax.jdo.option.ConnectionDriverName=org.postgresql.Driver -Djavax.jdo.option.ConnectionURL=jdbc:postgresql://hive-metastore-db:5432/metastore -Djavax.jdo.option.ConnectionUserName=hive -Djavax.jdo.option.ConnectionPassword=hive123"
+      # Ensure PostgreSQL connection is properly configured
+      SERVICE_OPTS: >-
+        -Djavax.jdo.option.ConnectionDriverName=org.postgresql.Driver
+        -Djavax.jdo.option.ConnectionURL=jdbc:postgresql://hive-metastore-db:5432/metastore
+        -Djavax.jdo.option.ConnectionUserName=hive
+        -Djavax.jdo.option.ConnectionPassword=hive123
+        -Dhive.metastore.warehouse.dir=/user/hive/warehouse
+        -Dhive.metastore.schema.verification=false
     volumes:
       - ./postgresql-42.7.7.jar:/opt/hive/lib/postgresql-42.7.7.jar
+      - ./hive-site.xml:/opt/hive/conf/hive-site.xml
     env_file:
       - ./config
     ports:
       - 9083:9083
-    # depends_on:
-    #   namenode:
-    #     condition: service_healthy
-    #   hive-metastore-db:
-    #     condition: service_healthy
+    depends_on:
+      namenode:
+        condition: service_healthy
+      hive-metastore-db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "nc", "-z", "localhost", "9083"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 8
+      start_period: 60s
 
-  # HiveServer2
+  # HiveServer2 - Fixed to use external Metastore
   hiveserver2:
     image: apache/hive:4.0.0
     hostname: hiveserver2
     environment:
       SERVICE_NAME: hiveserver2
-      SERVICE_OPTS: "-Dhive.metastore.uris=thrift://hive-metastore:9083"
+      # Force HiveServer2 to connect to external Metastore
+      SERVICE_OPTS: >-
+        -Dhive.metastore.uris=thrift://hive-metastore:9083
+        -Dhive.metastore.local=false
+        -Dhive.metastore.warehouse.dir=/user/hive/warehouse
+        -Dhive.server2.thrift.bind.host=0.0.0.0
+        -Dhive.server2.transport.mode=binary
+        -Dhive.server2.enable.doAs=false
+        -Djavax.jdo.option.ConnectionURL=jdbc:postgresql://hive-metastore-db:5432/metastore
+        -Djavax.jdo.option.ConnectionDriverName=org.postgresql.Driver
+        -Djavax.jdo.option.ConnectionUserName=hive
+        -Djavax.jdo.option.ConnectionPassword=hive123
       IS_RESUME: "true"
     env_file:
       - ./config
@@ -168,17 +188,20 @@ services:
     volumes:
       - ./test.sh:/opt/test.sh
       - ./hive-site.xml:/opt/hive/conf/hive-site.xml
-      - ./hive-queries:/opt/hive-queries # Mount directory for query files
-    # depends_on:
-    #   namenode:
-    #     condition: service_healthy
-    #   hive-metastore:
-    #     condition: service_healthy
+      - ./hive-queries:/opt/hive-queries
+      # Add PostgreSQL driver to HiveServer2 as well
+      - ./postgresql-42.7.7.jar:/opt/hive/lib/postgresql-42.7.7.jar
+    depends_on:
+      namenode:
+        condition: service_healthy
+      hive-metastore:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "nc", "-z", "localhost", "10000"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 10
+      start_period: 120s
 
 volumes:
   hive-metastore-db-data:
