--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
         run: |
           docker compose version
 
-      - name: Format HDFS NameNode
-        # This step formats the NameNode before starting the cluster.
-        # It uses --rm to remove the container immediately after formatting.
-        run: docker compose run --rm namenode hdfs namenode -format -force
+      # - name: Format HDFS NameNode
+      #   # This step formats the NameNode before starting the cluster.
+      #   # It uses --rm to remove the container immediately after formatting.
+      #   run: docker compose run --rm namenode hdfs namenode -format -force
 
       - name: Start Hadoop Cluster
         # Start all services in detached mode
