--- a/config
+++ b/config
@@ -6,8 +6,8 @@ CORE-SITE.XML_fs.defaultFS=hdfs://namenode
 
 # HDFS Configuration
 HDFS-SITE.XML_dfs.namenode.rpc-address=namenode:8020
+HDFS-SITE.XML_dfs.namenode.name.dir=/tmp/hadoop-root/dfs/name
 HDFS-SITE.XML_dfs.replication=1
-HDFS_SITE_XML_dfs_namenode_name_dir=/tmp/hadoop-root/dfs/name
 
 # MapReduce Configuration
 MAPRED-SITE.XML_mapreduce.framework.name=yarn
