--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,122 @@ services:
     #   historyserver:
     #     condition: service_healthy
 
+  # Spark Master
+  spark-master:
+    image: apache/spark:3.5.3
+    hostname: spark-master
+    command: ["./bin/spark-class", "org.apache.spark.deploy.master.Master"]
+    ports:
+      - 8080:8080  # Spark Master Web UI
+      - 7077:7077  # Spark Master port
+    env_file:
+      - ./config
+    environment:
+      SPARK_MODE: master
+      SPARK_MASTER_HOST: spark-master
+      SPARK_MASTER_PORT: 7077
+    volumes:
+      - ./spark-apps:/opt/spark-apps  # For Spark application files
+      - ./spark-data:/opt/spark-data  # For data files
+    networks:
+      - hadoop-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # Spark Worker 1
+  spark-worker-1:
+    image: apache/spark:3.5.3
+    hostname: spark-worker-1
+    command: ["./bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077"]
+    ports:
+      - 8081:8081  # Spark Worker Web UI
+    env_file:
+      - ./config
+    environment:
+      SPARK_MODE: worker
+      SPARK_MASTER_URL: spark://spark-master:7077
+      SPARK_WORKER_CORES: 2
+      SPARK_WORKER_MEMORY: 2g
+    volumes:
+      - ./spark-apps:/opt/spark-apps
+      - ./spark-data:/opt/spark-data
+    networks:
+      - hadoop-network
+    # depends_on:
+    #   spark-master:
+    #     condition: service_healthy
+
+  # Spark Worker 2
+  spark-worker-2:
+    image: apache/spark:3.5.3
+    hostname: spark-worker-2
+    command: ["./bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077"]
+    ports:
+      - 8082:8081  # Spark Worker Web UI (mapped to different host port)
+    env_file:
+      - ./config
+    environment:
+      SPARK_MODE: worker
+      SPARK_MASTER_URL: spark://spark-master:7077
+      SPARK_WORKER_CORES: 2
+      SPARK_WORKER_MEMORY: 2g
+    volumes:
+      - ./spark-apps:/opt/spark-apps
+      - ./spark-data:/opt/spark-data
+    networks:
+      - hadoop-network
+    # depends_on:
+    #   spark-master:
+    #     condition: service_healthy
+
+  # Spark History Server
+  spark-history-server:
+    image: apache/spark:3.5.3
+    hostname: spark-history-server
+    command: ["./bin/spark-class", "org.apache.spark.deploy.history.HistoryServer"]
+    ports:
+      - 18080:18080  # Spark History Server Web UI
+    env_file:
+      - ./config
+    environment:
+      SPARK_HISTORY_OPTS: "-Dspark.history.fs.logDirectory=hdfs://namenode:9000/spark-logs"
+    volumes:
+      - ./spark-apps:/opt/spark-apps
+    networks:
+      - hadoop-network
+    # depends_on:
+    #   namenode:
+    #     condition: service_healthy
+    #   spark-master:
+    #     condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:18080"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # Spark Client/Submit Node
+  spark-client:
+    image: apache/spark:3.5.3
+    hostname: spark-client
+    command: ["tail", "-f", "/dev/null"] # Keep container running
+    env_file:
+      - ./config
+    environment:
+      SPARK_MASTER_URL: spark://spark-master:7077
+    volumes:
+      - ./spark-apps:/opt/spark-apps
+      - ./spark-data:/opt/spark-data
+      - ./test.sh:/opt/test.sh
+    networks:
+      - hadoop-network
+    # depends_on:
+    #   spark-master:
+    #     condition: service_healthy
+
   # Hive Metastore Database (PostgreSQL)
   hive-metastore-db:
     image: postgres:13
