--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,7 +133,8 @@ services:
   spark-master:
     image: apache/spark:3.5.3
     hostname: spark-master
-    command: ["./bin/spark-class", "org.apache.spark.deploy.master.Master"]
+    entrypoint:
+      ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.master.Master"]
     ports:
       - 8080:8080 # Spark Master Web UI
       - 7077:7077 # Spark Master port
@@ -158,12 +159,7 @@ services:
   spark-worker-1:
     image: apache/spark:3.5.3
     hostname: spark-worker-1
-    command:
-      [
-        "./bin/spark-class",
-        "org.apache.spark.deploy.worker.Worker",
-        "spark://spark-master:7077",
-      ]
+    entrypoint: ["/opt/spark/bin/spark-class"]
     ports:
       - 8081:8081 # Spark Worker Web UI
     env_file:
@@ -186,12 +182,7 @@ services:
   spark-worker-2:
     image: apache/spark:3.5.3
     hostname: spark-worker-2
-    command:
-      [
-        "./bin/spark-class",
-        "org.apache.spark.deploy.worker.Worker",
-        "spark://spark-master:7077",
-      ]
+    entrypoint: ["/opt/spark/bin/spark-class"]
     ports:
       - 8082:8081 # Spark Worker Web UI (mapped to different host port)
     env_file:
