--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -216,7 +216,8 @@ services:
       - ./config
     environment:
 #      SPARK_HISTORY_OPTS: "-Dspark.history.fs.logDirectory=hdfs://namenode:9000/spark-logs"
-      SPARK_HISTORY_OPTS: "-Dspark.history.fs.logDirectory=hdfs://namenode/spark-logs"
+#      SPARK_HISTORY_OPTS: "-Dspark.history.fs.logDirectory=hdfs://namenode/spark-logs"
+      SPARK_HISTORY_OPTS: "-Dspark.history.fs.logDirectory=file:///tmp/spark-logs"
     volumes:
       - ./spark-apps:/opt/spark-apps
     networks:
