--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -242,7 +242,9 @@ services:
     env_file:
       - ./config
     environment:
-      SPARK_MASTER_URL: spark://spark-master:7077
+      - SPARK_HOME=/opt/spark
+      - PATH=/opt/spark/bin:/opt/spark/sbin:$PATH
+      - SPARK_MASTER_URL=spark://spark-master:7077
     volumes:
       - ./spark-apps:/opt/spark-apps
       - ./spark-data:/opt/spark-data
